--- a/index.html
+++ b/index.html
@@ -12,42 +12,11 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="./favicon.ico">
 	</head>
-	<body class="is-preload">
-		<!-- Messenger 洽談外掛程式 Code -->
-    <div id="fb-root"></div>
-
-    <!-- Your 洽談外掛程式 code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
-    <script>
-        var chatbox = document.getElementById('fb-customer-chat');
-        chatbox.setAttribute("page_id", "107257035132542");
-        chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <script>
-        window.fbAsyncInit = function () {
-            FB.init({
-                xfbml: true,
-                version: 'v18.0'
-            });
-        };
-
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
 
 		<!-- Header -->
 			<header id="header">
 				<h1>歡迎光臨</h1>
-				<p>製作團隊<a href="http://mctw.net">主頁</a></p>
+				<p>製作團隊<a href="https://home-czr.pages.dev/">主頁</a></p>
 			</header>
 		    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 
