--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
+				<!--<input type="email" name="email" id="email" placeholder="Email Address" />-->
+				<input type="submit" value="let's go" />
 			</form>
 
 		<!-- Footer -->
