--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1>歡迎光臨</h1>
 				<p>製作團隊<a href="https://home-czr.pages.dev/">主頁</a></p>
 			</header>
-		    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>https://www.tinkercad.com/things/9LrCF48rWkm-123?sharecode=D9gt7kZlmDfBWu_Q1iuGh4eUtnSDmVVq7N3zWF5x4cg
+		    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 	
 
 <form>
@@ -29,7 +29,7 @@
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="#">
 				<!--<input type="email" name="email" id="email" placeholder="Email Address" />-->
-				<input type="submit" value="let's go" />
+				<input type="submit" value="let's go" href="https://www.tinkercad.com/things/9LrCF48rWkm-123?sharecode=D9gt7kZlmDfBWu_Q1iuGh4eUtnSDmVVq7N3zWF5x4cg"/>
 			</form>
 
 		<!-- Footer -->
@@ -50,4 +50,5 @@
 
 	</body>
 </html>
+
 
