--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<header id="header">
 				<h1>歡迎光臨</h1>
 				<p>製作團隊<a href="https://home-czr.pages.dev/">主頁</a></p>
+				<p>快速連結<a href="https://www.tinkercad.com/things/9LrCF48rWkm-123?sharecode=D9gt7kZlmDfBWu_Q1iuGh4eUtnSDmVVq7N3zWF5x4cg"">主頁</a></p>
 			</header>
 		    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 	
@@ -29,7 +30,7 @@
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="#">
 				<!--<input type="email" name="email" id="email" placeholder="Email Address" />-->
-				<input type="submit" value="let's go" href="https://www.tinkercad.com/things/9LrCF48rWkm-123?sharecode=D9gt7kZlmDfBWu_Q1iuGh4eUtnSDmVVq7N3zWF5x4cg"/>
+				<input type="submit" value="let's go"/>
 			</form>
 
 		<!-- Footer -->
@@ -50,5 +51,6 @@
 
 	</body>
 </html>
+
 
 
