--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+ㄝ<!DOCTYPE HTML>
 <!--
 	Eventually by HTML5 UP
 	html5up.net | @ajlkn
@@ -17,8 +17,7 @@
 			<header id="header">
 				<h1>歡迎光臨</h1>
 				<p>製作團隊<a href="https://home-czr.pages.dev/">主頁</a></p>
-				<p>快速連結<a href="https://www.tinkercad.com/things/9LrCF48rWkm-123?sharecode=D9gt7kZlmDfBWu_Q1iuGh4eUtnSDmVVq7N3zWF5x4cg"">主頁</a></p>
-				<button><a href="https://drive.google.com/drive/folders/1YIq1BNloXVw3UAbYGPVNJVWUioVvHcVZ?usp=sharing">上課檔案</a></button>
+
 			</header>
 		    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 	
@@ -52,6 +51,7 @@
 
 	</body>
 </html>
+
 
 
 
